--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -153,6 +153,7 @@
     <Compile Include="ProjectileManagement\ParticleEmitter.cs" />
     <Compile Include="ProjectileManagement\ParticleSettings.cs" />
     <Compile Include="ProjectileManagement\ParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\StarParticles.cs" />
     <Compile Include="ProjectileManagement\ParticleVertex.cs" />
     <Compile Include="ProjectileManagement\Projectile.cs" />
     <Compile Include="ProjectileManagement\ProjectileManager.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="ProjectileManagement\ParticleSystems\FireParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\ProjectileTrailParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\SmokePlumeParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\StarSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
