--- a/UHSampleGame/UHSampleGame.csproj
+++ b/UHSampleGame/UHSampleGame.csproj
@@ -153,7 +153,10 @@
     <Compile Include="ProjectileManagement\ParticleEmitter.cs" />
     <Compile Include="ProjectileManagement\ParticleSettings.cs" />
     <Compile Include="ProjectileManagement\ParticleSystem.cs" />
-    <Compile Include="ProjectileManagement\ParticleSystems\StarParticles.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\P1Upgrade.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\P2Upgrade.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\P3Upgrade.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\P4Upgrade.cs" />
     <Compile Include="ProjectileManagement\ParticleVertex.cs" />
     <Compile Include="ProjectileManagement\Projectile.cs" />
     <Compile Include="ProjectileManagement\ProjectileManager.cs" />
@@ -162,7 +165,8 @@
     <Compile Include="ProjectileManagement\ParticleSystems\FireParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\ProjectileTrailParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\SmokePlumeParticleSystem.cs" />
-    <Compile Include="ProjectileManagement\StarSystem.cs" />
+    <Compile Include="ProjectileManagement\Repair.cs" />
+    <Compile Include="ProjectileManagement\Upgrade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
