--- a/UHSampleGame/UHSampleGame XBOX.csproj
+++ b/UHSampleGame/UHSampleGame XBOX.csproj
@@ -109,12 +109,14 @@
     </Compile>
     <Compile Include="Player\PlayerCollection.cs" />
     <Compile Include="PowerManagement\PowerManager.cs" />
+    <Compile Include="ProjectileManagement\Explosion.cs" />
     <Compile Include="ProjectileManagement\ParticleEmitter.cs" />
     <Compile Include="ProjectileManagement\ParticleSettings.cs" />
     <Compile Include="ProjectileManagement\ParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\ExplosionParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\ExplosionSmokeParticleSystem.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\FireParticleSystem.cs" />
+    <Compile Include="ProjectileManagement\ParticleSystems\LaserParticles.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\P2Upgrade.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\P3Upgrade.cs" />
     <Compile Include="ProjectileManagement\ParticleSystems\P4Upgrade.cs" />
